--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -29,8 +29,10 @@
 
         @if (header.key === 'actions') {
         <app-menu-dropdown [actions]="header.actions" [rowIndex]="idItem"></app-menu-dropdown>
-        <app-confirmation-modal ></app-confirmation-modal>
+        @if(_modalSvc.showConfirmDialog()) {
+          <app-confirmation-modal [productName]="_productsSvc.product()?.name"></app-confirmation-modal>
         }
+      }
       </td>
       }
     </tr>
