--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,29 +1,41 @@
-.modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+div.confirm-dialog {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
 }
 
-.modal-content {
-  background-color: #fff;
+div.confirm-dialog-content {
+  width: auto;
+  background: white;
   padding: 20px;
   border-radius: 5px;
-  width: 300px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
-.modal-header h2 {
-  margin: 0;
+div.actions {
+  width: auto;
+  margin-top: 20px;
 }
 
-.modal-footer {
-  display: flex;
-  justify-content: space-between;
+button {
+  margin: 0 10px;
+  padding: 10px 20px;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+.btn-cancel {
+  background-color: #ccc;
+}
+
+.btn-confirm {
+  background-color: #f0ad4e;
 }
