--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -30,7 +30,7 @@
         @if (header.key === 'actions') {
         <app-menu-dropdown [actions]="header.actions" [rowIndex]="idItem"></app-menu-dropdown>
         @if(_modalSvc.showConfirmDialog()) {
-          <app-confirmation-modal [productName]="_productsSvc.product()?.name"></app-confirmation-modal>
+          <app-confirmation-modal ></app-confirmation-modal>
         }
       }
       </td>
