--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -13,20 +13,24 @@ div.confirm-dialog {
 div.confirm-dialog-content {
   width: auto;
   background: white;
-  padding: 20px;
+  // padding: 20px;
   border-radius: 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
-
+div.content__dialog{
+  width: auto;
+  padding: 32px 24px;
+}
 div.actions {
   width: auto;
-  margin-top: 20px;
+  padding: 16px;
+  border-top: 1px solid #ccc;
 }
 
 button {
   margin: 0 10px;
-  padding: 10px 20px;
+  padding: 16px 40px;
   border: none;
   color: #fff;
   cursor: pointer;
@@ -34,8 +38,10 @@ button {
 
 .btn-cancel {
   background-color: #ccc;
+  color: $bg-secondary;
 }
 
 .btn-confirm {
-  background-color: #f0ad4e;
+  background-color: $color-yellow;
+  color: $bg-secondary;
 }
